# platinum_bridge

./: CMakeLists.txt  README.md  package.xml
include/platinum_bridge/: bridge.h
launch/: robot_description.launch  roxanne_bridge.launch
logs/: log.txt  test1.txt  test_log.txt
maps/hospital/: hospital.xml  map.yaml
params/: params.xml
params/hospital/: params.xml
scripts/: getGoals.py  loadGoals.py  load_goals.sh  map1.json
src/: bridge.cpp
srv/: getGoal.srv
