<?xml version="1.0"?>
<package format="2">
  <name>platinum_bridge</name>
  <version>0.0.0</version>
  <description>The platinum_bridge package</description>

  <maintainer email="phani@todo.todo">phani</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tinyxml</build_depend>
  <build_depend>roxanne_rosjava_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>roxanne_rosjava_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
   <exec_depend>tinyxml</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roxanne_rosjava_msgs</exec_depend>
  <depend>message_generation</depend>
  <depend>actionlib</depend>
  <depend>geometry_msgs</depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
